# Modules

./: LICENSE
ErrorHandler/: CMakeLists.txt  README.md
ErrorHandler/resources/: errors.json
ErrorHandler/src/: ErrorDialog.cpp  ErrorDialog.h  ErrorHandler.cpp  ErrorHandler.h
Modules/ModuleError/: CMakeLists.txt  LICENCE.txt  README.md  errors.json  moduleerror.cpp  moduleerror.h
